@@ -18,6 +18,8 @@ dialogs_libspdialogs_a_SOURCES = \
 	dialogs/debugdialog.h	\
 	dialogs/dialog-events.cpp	\
 	dialogs/dialog-events.h	\
+	dialogs/eek-color-def.h	\
+	dialogs/eek-color-def.cpp	\
 	dialogs/eek-preview.h	\
 	dialogs/eek-preview.cpp	\
 	dialogs/export.cpp	\
